[fix] corrected spacing between name and votd

--- a/src/components/Greeting.css
+++ b/src/components/Greeting.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    margin: 0 0 5% 0;
 }
 
 .Greeting {
